# server/router/avf_card.go
@@ -31,6 +31,7 @@ func InitApiAvfCardRouter(Router *gin.RouterGroup) {
 			ApiCardRouter.POST("/buyCard", web.BuyCard)
 			ApiCardRouter.POST("/payCard", web.PayCard)
 			ApiCardRouter.GET("/myBuyCard", web.MyBuyCard)
+			ApiCardRouter.GET("/miningRecord", web.MiningRecord)
 		}
 	}
 }
